# adhackaton

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: main.py  readme_bot.md  requirements.txt  states.py  storage.py
bot/handlers/: start.py
docker/: app.sh
migrations/: env.py
src/: config.py  llm_openai.py  main.py  main_bot.py  main_webapp.py
src/app/: characters_router.py  messages_router.py  models.py  prompts.py  schemas.py
src/bot/: requirements.txt  states.py  templates.py
src/bot/handlers/: chat.py  create_character.py  edit_character.py  manage_characters.py  onboarding.py  random_character.py  select_predefined_character.py
src/bot/keyboards/: create_character.py  main_menu.py  onboarding.py  select_predefined_character.py
